# django-models

./: pyproject.toml  readme.md
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/: home.css
blog/templates/: base.html  home.html  post_detail.html
blog_project/: settings.py
templates/: base.html  home.html  post_detail.html
