[tool.poetry]
name = "django-models"
version = "0.1.0"
description = ""
authors = ["Dianashafee <diana.shafee1997@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
